# pronote-pour-skillbeam

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  README.skillbeam-v3.fr.md  docker-compose.override.yml  docker-compose.yml  start-lite.sh  stop-lite.sh  test.xml  test_parse.py
apps/web/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ai-review-popup.tsx  conversion-overlay.tsx  eco-impact-panel.tsx  pronote-icons.tsx  stepper.tsx  tile.tsx
apps/web/hooks/: useBusinessLogic.ts  useItemEditor.ts
apps/web/lib/: api.ts  types.ts  utils.ts
infra/minio/: cors.json
infra/traefik/: dynamic.yml
services/api-gateway/: Dockerfile  alembic.ini  requirements.txt
services/export/: Dockerfile  requirements.txt
services/generate/: Dockerfile  requirements.txt
services/ingest/: Dockerfile
services/worker/: Dockerfile  requirements.txt
shared/python/: pyproject.toml
shared/python/shared/: __init__.py  auth.py  celery_app.py  config.py  correlation.py  db.py  enums.py  jobs.py  logging.py  models.py  otel.py  rate_limit.py  schemas.py  storage.py
shared/python/shared/exporters/: __init__.py  anki_exporter.py  base.py  branding.py  docx_exporter.py  h5p_exporter.py  moodle_xml_exporter.py  pdf_exporter.py  pronote_xml_exporter.py  qti_exporter.py  registry.py  xlsx_exporter.py
shared/python/shared/generation/: __init__.py  templates.py
shared/python/shared/ingest/: __init__.py  parsers.py
shared/python/shared/llm/: providers.py
(+31 files in other folders)
